mute/unmute on 'm' key

--- a/manual/shell-fm.1
+++ b/manual/shell-fm.1
@@ -125,6 +125,9 @@ Increase volume.
 .TP
 .B -
 Decrease volume.
+.TP
+.B m
+Mute/unmute.
 .PP
 .SH SETUP
 Before you start, you should have created the directories
